add manual build workflow

--- a/.github/workflows/manual_build.yml
+++ b/.github/workflows/manual_build.yml
@@ -1,26 +1,22 @@
-name: Release
+name: Manual Build
 on:
-  release:
-    types: [released]
+ workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version of engine to build e.g. "3.4.4", "3.5"'     
+        required: true
+        type: string
+      release_name:
+        description: 'Release name, usually "stable", but can also be something like "rc3", "beta1"'
+        type: string
+        default: "stable"
+        required: true
 env:
   IMAGE_NAME: godot-ci
 jobs:
-  version:
-    name: Get Version
-    runs-on: ubuntu-20.04
-    outputs:
-      version: ${{ steps.calculate.outputs.version }}
-      release_name: ${{ steps.calculate.outputs.release_name }}
-    steps:
-      - id: calculate
-        run: |
-          REF_NAME=${{ github.ref_name }}
-          echo "::set-output name=version::${REF_NAME%-*}"
-          echo "::set-output name=release_name::${REF_NAME#*-}"
   build:
     name: Build Image
     runs-on: ubuntu-20.04
-    needs: [version]
     steps:
       - uses: actions/checkout@v3
       - run:  echo IMAGE_OWNER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
@@ -47,12 +43,12 @@ jobs:
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ needs.version.outputs.version }}
           build-args: |
-            GODOT_VERSION=${{ needs.version.outputs.version }}
-            RELEASE_NAME=${{ needs.version.outputs.release_name }}
+            GODOT_VERSION=${{ github.event.inputs.version }}
+            RELEASE_NAME=${{ github.event.inputs.release_name }}
+            SUBDIR=${{ github.event.inputs.release_name == 'stable' && '' || format('/{0}', github.event.inputs.release_name) }}
   build-mono:
     name: Build Mono Image
     runs-on: ubuntu-20.04
-    needs: [version]
     steps:
       - uses: actions/checkout@v3
       - run:  echo IMAGE_OWNER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
@@ -79,6 +75,7 @@ jobs:
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:mono-latest
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:mono-${{ needs.version.outputs.version }}
           build-args: |
-            GODOT_VERSION=${{ needs.version.outputs.version }}
-            RELEASE_NAME=${{ needs.version.outputs.release_name }}
+            GODOT_VERSION=${{ github.event.inputs.version }}
+            RELEASE_NAME=${{ github.event.inputs.release_name }}
+            SUBDIR=${{ github.event.inputs.release_name == 'stable' && '' || format('/{0}', github.event.inputs.release_name) }}
             
