--- a/.github/workflows/manual_build.yml
+++ b/.github/workflows/manual_build.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - run:  echo IMAGE_TAG=$(${{ github.event.inputs.release_name == 'stable' && '' || format('.{0}', github.event.inputs.release_name) }}) >> $GITHUB_ENV
+      - run:  echo IMAGE_TAG=$(${{ echo github.event.inputs.release_name == 'stable' && '' || format('.{0}', github.event.inputs.release_name) }}) >> $GITHUB_ENV // doesn't work
       - name: Build and push Docker images
         uses: docker/build-push-action@v2.9.0
         with:
@@ -62,7 +62,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - run:  echo IMAGE_TAG=$(${{ github.event.inputs.release_name == 'stable' && '' || format('.{0}', github.event.inputs.release_name) }}) >> $GITHUB_ENV
+      - run:  echo IMAGE_TAG=$(${{ echo github.event.inputs.release_name == 'stable' && '' || format('.{0}', github.event.inputs.release_name) }}) >> $GITHUB_ENV
       - name: Build and push Docker images
         uses: docker/build-push-action@v2.9.0
         with:
